[package]
name = "bookdata"
version = "3.0.0-dev"
authors = ["Michael Ekstrand <michaelekstrand@boisestate.edu>"]
default-run = "bookdata"
edition = "2021"
license = "MIT"
rust-version = "1.59"

[profile.release]
opt-level = 3
debug = 1
lto = "thin"

[dependencies]
paste = "^1.0"

clap = { version = "^4", features = ["derive"] }
enum_dispatch = "^0.3.7"
happylog = { version = "^0.3.0-b3", features = ["clap"] }
indicatif = "^0.17.0"
log = { version = "^0.4.8", features = ["std"] }

lazy_static = "^1"

csv = "^1.0"
quick-xml = "^0.31.0"
rmp-serde = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_yaml = { version = "^0.9" }

anyhow = "^1.0.26"
crossbeam = "^0.8"
fallible-iterator = "^0.3.0"
hashbrown = "^0.14"
os_pipe = "^1.0"
rayon = "^1.5"
relative-path = "~1.9"
thiserror = "^1.0"

flate2 = { version = "^1.0.6", features = ["zlib-ng"] }
md-5 = "^0.10"
zip = { version = "^0.6.0", default-features = false, features = ["deflate"] }
zstd = { version = "^0.13", features = ["zstdmt"] }

chrono = "^0.4"
cpu-time = "^1.0"
friendly = { version = "^0.1.0", features = ["chrono"] }
glob = "^0.3"
hex = "^0.4.3"
num_enum = "^0.7.2"
parse-display = "^0.9"
peg = "^0.8"
regex = "^1.5.0"
unicode-normalization = "0.1"

petgraph = { version = "^0.6", features = ["serde-1"] }
# graphalgs = { version="^0.0.6", optional=true }

# heavy use of the Polars data processing engine
# apache parquet
arrow = "~55"
parquet = "~55"
parquet_derive = "~55"
polars = { version = "~0.37", default-features = false, features = ["parquet", "csv", "lazy", "dtype-slim", "dtype-i8", "dtype-u8", "dtype-i16", "dtype-u16" # "dtype-full",
] }
# we need direct access to the Polars arrow & Parquet backends
# they have vendored & taken over maintenance of arrow2/parquet2
polars-arrow = "~0.37"
# include direct polars-core for docs to work
polars-core = "~0.37"
polars-parquet = "~0.37"

# we use snmalloc, since allocate and free across threads is common
snmalloc-rs = { version = "^0.3.4" }

# we don't have a lot of tests, but we do have a few
[dev-dependencies]
env_logger = "^0.11"
quickcheck = { version = "^1.0", default-features = false }
tempfile = "^3.2"
test-log = "^0.2"

[features]
default = ["log/release_max_level_debug"]
# adv-graph = ["graphalgs", "rayon"]

# on Unix, we can report process resource usage
[target.'cfg(unix)'.dependencies]
libc = "^0.2"
