[project]
name = "bookdata"
version = "2.0"
dependencies = [
    "docopt >=0.6",
    "pandas >=1.3",
    "pyarrow >=5.0",
    "numpy >=1.21",
    "notebook >=6.4",
    "jupytext >=1.13",
    "dvc ==2.7.*",
    "dvc-s3 ==2.7.*",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pip",
    "poetry >=1.0",
    "pip-tools >=6",
    "conda-lock >=0.13.2",
    "jupyterlab >=3.1",
]
doc = [
    "sphinx>=4.2",
    "sphinx-autobuild",
    "myst-parser>=0.15",
    "furo>=2021.10",
    "sphinxcontrib-bibtex ==2.*",
]

[tool.conda-lock]
channels = [
    "conda-forge"
]

[tool.conda-lock.dependencies]
python = "=3.8"
rust = ">=1.55"
c-compiler = "*"
