[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bookdata"
version = "2.0"
description = "README.md"
dependencies = [
    "docopt >=0.6",
    "pandas >=1.3",
    "pyarrow >=5.0",
    "numpy >=1.21",
    "notebook >=6.4",
    "jupytext >=1.13",
    "dvc >=2.7",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pip",
    "flit >=3.2,<4",
    "pip-tools >=6",
    "conda-lock ==1.*",
    "jupyterlab >=3.1",
    "sphinx-autobuild",
    "seaborn",
]
doc = [
    "sphinx>=4.2",
    "myst-parser>=0.15",
    "furo>=2021.10",
    "sphinxcontrib-bibtex ==2.*",
    "sphinxcontrib-mermaid ==0.7.*",
]

[tool.conda-lock]
channels = [
    "conda-forge"
]

[tool.conda-lock.dependencies]
python = "=3.8"
rust = ">=1.59"
c-compiler = "*"
dvc-s3 = "*"
